# wedding-gallery-application

./: .env.example  .gitignore  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  LICENSE  README.md  SECURITY.md  SETUP-DEBIAN.md  SETUP.md  add_tags.py  debian-packages.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  requirements-debian.txt  requirements.txt  sample_tags.csv  setup_email_env.sh  test_email.py  test_manual_verification.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
attached_assets/: Pasted--Current-location-https-0e1efad5-cfaf-4762-bbde-543dc8094838-00-2yutrstchfwzz-spock-replit-dev-50-1757772338326_1757772338327.txt  Pasted--POST-api-images-HTTP-1-1-500-103073-Internal-Server-Error-api-images-Traceback-most-recent-c-1758224687538_1758224687538.txt  Pasted-Error-fetching-images-message-Request-failed-with-status-code-404-name-AxiosError-descrip-1757882690208_1757882690209.txt
deployment/: README.md  deploy.sh  git-verify.sh  gunicorn.service  gunicorn.socket  nginx.conf  setup_email_env.sh  ssl-setup.sh  test_email.py  verify-deployment.sh
django_project/: settings.py  urls.py
docs/: DEPLOYMENT.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
images/: admin.py  face_recognition_utils.py  face_views.py  middleware.py  models.py  serializers.py  storage.py  urls.py  views.py
scripts/: deploy.sh  init_db.py
staticfiles/: index.html
(+44 files in other folders)
